# teltonika-configurator

./: .gitignore  Cargo.toml  LICENSE-AGPL  README.md  cargowatch.sh
crates/configurator/: Cargo.toml
crates/configurator/src/: assets.rs  hello.rs  main.rs  theme.rs
crates/configurator/ui/: FMBFAMILY.gpuiml  FMT100.gpuiml
crates/xml2gpui/: Cargo.toml
crates/xml2gpui/src/: component_tree.rs  lib.rs  tree.rs
crates/xml2gpui/src/components/input/: checkbox.rs  mod.rs  number.rs  select.rs  text.rs
crates/xml2gpui_macros/src/: lib.rs
src/: component_tree.rs  hello.rs  hello_old.rs  main.rs  paths.rs
teltonika_parameters/: FMBFAMILY-FINAL.json  FMBFAMILY.json  FMP100.json  finalTables.json  index.mjs  make_html.mjs  package-lock.json  package.json  teltonika_create_better_table.mjs  teltonika_create_html.mjs
ui/: FMT100.gpuiml
