[package]
name = "gpui-test"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
catppuccin = "1.3.0"
serde = "1.0.195"
serde_json = "1.0.111"
tracing = "0.1"
tracing-subscriber = "0.3"
dark-light = "1.0.0"
toml = "0.8.10"
whoami = { version = "1.4.1", default-features = false }
anyhow = "1.0.80"
bonsaidb = { version = "0.5.0", features = ["local-full"] }
quick-xml = "0.31.0"
notify = "6.1.1"
futures = "0.3.30"